# Cpp-AI-Web-Server

./: README.md
cpp-backend/: CMakeLists.txt  main.cpp
cpp-backend/control/: llm_controller.hpp  login_controller.hpp  scenimefy_controller.hpp  waifu_controller.hpp
cpp-backend/http/: http_message.hpp  http_session.cpp  http_session.h
cpp-backend/log/: logger.hpp
cpp-backend/server/: acceptor.hpp  epoll.hpp  router.hpp  server.cpp  server.h
cpp-backend/thread/: thread_pool.hpp
cpp-backend/utils/: utils.hpp
web/: choose_model.html  llm.html  login.html  scenimefy.html  waifu.html
web/figures/scenimefy_outputs/shinkai-test/test_Shinkai/: index.html
